v2.7.8   - Fixed hangs and crashes on playback of single images in EDL.
	 - Fixed file requester not showing negative frames correctly.
	 - Fixed file association for jpg, png, tiff, and others on Linux 
	   installers.

v2.7.7   - Clamped values of ITU 709 as it could result in overflows and
	   saturated colors.
	 - Windows64 version of mrViewer was distributed with 16bits
	   ImageMagick instead of 32 bits HDRI.
	 - Added sun raster images to mime types under Linux.
	 - Bug fixed streams' duration to not be always 200 seconds, but
	   the real duration.
	 - Streams duration are shown as frames, seconds and time instead
	   of seconds and time only.
	 - Bug fixed openexr loader with lumma as it was trashing memory
	   and possibly hanging the viewer. This also makes the loader a tad
	   faster.
	 - Made R,G,B,A,L,Z hotkeys default to main channels only.
	   Previously they would randomly change depending on what
	   channel was selected.
	 - Made LUT not include image in lut path, so multiple images
	   can share the same lut.  This makes it calculate less luts per
	   invocation.

v2.7.6   - Fixed LUT comparison of two images.  Previously, LUT could turn
	   off without any warning when switching images.
	 - Fixed fit image when image was flipped and not stereo.
	 - Fixed creation of thumbnails of movies created with ITU 601 
	   colors.
	 - Fixed color queries of movies created with ITU 601 colors.
	 - Improved accuracy of 3d lookup color evaluation in pixel queries.
	 - Made minor adjustments to color bar interface, moving the Pixel
	   Values widget.

v2.7.5   - Saving out a GradeRef that was turned into LMTs now works
	   properly.  This allows loading and saving an ACES clip file 
	   without corrupting the transforms.
	 - Fixed a bug that would remove the last LMT if you chose
	   cancel on the last empty LMT.
	 - Fixed a memory corruption if LMT's Choose requester was chosen
	   twice.