@@ -31,11 +31,10 @@ namespace mrv {open
     }
     decl {std::string pixel_type;} {public
     }
-    Function {make_window()} {open
-    } {
+    Function {make_window(bool aces)} {} {
       {fltk::Window} uiMain {
         label {OpenEXR Saving} open
-        xywh {417 244 315 315} resizable modal noborder visible
+        xywh {4 451 315 315} resizable modal noborder visible
       } {
         {fltk::Group} {} {
           label {OpenEXR Options}
@@ -122,8 +121,9 @@ v->uiMain->make_exec_return(false);}
           xywh {152 274 63 29}
         }
         {fltk::LightButton} uiACESmetadata {
-          label {ACES metadata} selected
-          xywh {95 200 125 35} value 1
+          label {ACES metadata}
+          xywh {95 200 125 35}
+          extra_code {o->value( aces );}
         }
       }
     }
@@ -136,10 +136,11 @@ _ACESmetadata = uiACESmetadata->value();} {}
 else if ( pixel_type == "Float" ) _pixel_type = Imf::FLOAT;
 else if ( pixel_type == "UInt" ) _pixel_type = Imf::UINT;} {}
     }
-    Function {EXROptionsUI()} {open
+    Function {EXROptionsUI(bool aces = false) : EXROpts(aces)} {open
     } {
-      code {fltk::Window* w = make_window();
-if ( w->exec() ) convert();} {}
+      code {fltk::Window* w = make_window(aces);
+if ( w->exec() ) convert();} {selected
+      }
     }
   }
 } 
